# DocEx

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  cors.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  extraction.py
backend/app/services/: __init__.py  fireworks_service.py  task_processor.py
backend/app/store/: __init__.py  job_store.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  nginx.conf
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FileUpload.css  FileUpload.jsx  ResultView.css  ResultView.jsx  Toast.css  Toast.jsx
frontend/src/services/: api.js
